--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -87,12 +87,12 @@ RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod +x /usr/bin/rpmdev-setuptree && \
     chmod 777 /etc/passwd
 
+# Config git
+RUN git config --global user.email "root@s2i" && \
+    git config --global user.name "root"
+
 # This default user is created in the openshift/base-centos7 image
 USER 1000280000
-
-# Config git
-RUN git config --global user.email "1000280000@s2i" && \
-    git config --global user.name "1000280000"
 
 # Add to passwd
 RUN uid=1000280000 && \
