--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -87,10 +87,6 @@ RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod +x /usr/bin/rpmdev-setuptree && \
     chmod 777 /etc/passwd
 
-# Config git
-RUN git config --global user.email "root@s2i" && \
-    git config --global user.name "root"
-
 # This default user is created in the openshift/base-centos7 image
 USER 1000280000
 
@@ -99,9 +95,10 @@ RUN uid=1000280000 && \
     gid=0 && \
     echo "${uid}:x:${uid}:${gid}:default uid:/home/default:/bin/sh" >> /etc/passwd
 
-# Set up rpmbuild dir
-ENV HOME=/home
-RUN rpmdev-setuptree
+# Config git
+RUN cd /home/default && \
+    git config --global user.email "1000280000@s2i" && \
+    git config --global user.name "1000280000"
 
 WORKDIR /home/openblas_tests
 
