--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -98,7 +98,7 @@ RUN uid=1000280000 && \
     echo "${uid}:x:${uid}:${gid}:default uid:/home/default:/bin/sh" >> /etc/passwd
 
 # Config git
-RUN cd /home/default
+RUN cd /home/default && \
     git config --global user.email "1000280000@s2i" && \
     git config --global user.name "1000280000"
 
