--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -5,6 +5,9 @@ ENV LANG=en_US.utf8
 USER root
 ENV BUILDER_VERSION 1.0
 
+# This is to bypass the host key checking when cloning w/ git
+ENV GIT_SSH_COMMAND='ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
+
 # Set up labels
 LABEL io.openshift.s2i.scripts-url="image:///usr/libexec/s2i"
 LABEL io.openshift.expose-services="8080:http"
@@ -78,8 +81,7 @@ RUN git clone https://pagure.io/rpmdevtools.git && \
     rm -rf rpmdevtools
 
 # Give user permissions to modify the 'macros' file + other files to run tests
-RUN mkdir -p /home/default && \
-    chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
+RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod +x ${OPENBLAS_TESTS}/compile_compare.sh && \
     chmod 777 ${OPENBLAS_TESTS}/src/gemm_test.c && \
     chmod 777 ${OPENBLAS_TESTS} && \
@@ -87,7 +89,8 @@ RUN mkdir -p /home/default && \
     chmod 777 /usr/libexec/s2i/run && \
     chmod +x /usr/bin/rpmdev-setuptree && \
     chmod 777 /etc/passwd && \
-    chmod 777 /home/default
+    mkdir -p /opt/app-root/src && \
+    chmod 777 /opt/app-root/src
 
 # This default user is created in the openshift/base-centos7 image
 USER 1000280000
@@ -96,11 +99,6 @@ USER 1000280000
 RUN uid=1000280000 && \
     gid=0 && \
     echo "${uid}:x:${uid}:${gid}:default uid:/home/default:/bin/sh" >> /etc/passwd
-
-# Config git
-RUN cd /home/default && \
-    git config --global user.email "1000280000@s2i" && \
-    git config --global user.name "1000280000"
 
 WORKDIR /home/openblas_tests
 
