Re-adding commands to configure git

--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -90,7 +90,8 @@ RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod +x /usr/bin/rpmdev-setuptree && \
     chmod 777 /etc/passwd && \
     mkdir -p /opt/app-root/src && \
-    chmod 777 /opt/app-root/src
+    chmod 777 /opt/app-root/src && \
+    chmod 777 /opt/app-root
 
 # This default user is created in the openshift/base-centos7 image
 USER 1000280000
@@ -99,6 +100,10 @@ USER 1000280000
 RUN uid=1000280000 && \
     gid=0 && \
     echo "${uid}:x:${uid}:${gid}:default uid:/home/default:/bin/sh" >> /etc/passwd
+
+# Configure git
+RUN git config --global user.email "default_user@s2i" && \
+    git config --global user.name "default_user"
 
 WORKDIR /home/openblas_tests
 
