--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -64,6 +64,8 @@ RUN yum -y update && \
                    time \
                    wget \
                    yum-utils \
+                   zlib \
+                   zlib-devel \
                    --nogpgcheck  && \
     rm -rf /var/cache/yum*
 
