Changing installation destination for nspr

--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -89,7 +89,7 @@ RUN git config --global user.email "root@s2i" && \
 # Get rpmbuild, but first step is to get nspr
 RUN git clone https://github.com/servo/nspr.git && \
     cd nspr && \
-    ./configure --enable-64bit && \
+    ./configure --enable-64bit --prefix=/usr/local && \
     make && \
     make install
 RUN wget http://ftp.rpm.org/releases/rpm-4.14.x/rpm-4.14.2.1.tar.bz2 && \
