Reorganizing Dockerfile to use Ansible for installing prerequisites

--- a/OpenBLAS/OpenShift/templates/openblas-buildconfig-rhel7.yaml
+++ b/OpenBLAS/OpenShift/templates/openblas-buildconfig-rhel7.yaml
@@ -23,7 +23,7 @@ objects:
     strategy: 
       type: "Docker"
       dockerStrategy:
-        dockerfilePath: "OpenBLAS/Dockerfiles/Dockerfile.openshift"
+        dockerfilePath: "OpenBLAS/Dockerfiles/Dockerfile.openshift_rhel7"
     output: 
       to:
         kind: "ImageStreamTag"
