Adding RHEL 8 as an option for OpenShift

--- a/OpenBLAS/OpenShift/ansible/roles/install-prereqs/tasks/main.yaml
+++ b/OpenBLAS/OpenShift/ansible/roles/install-prereqs/tasks/main.yaml
@@ -55,6 +55,8 @@
       - libquadmath-devel
       - libtool
       - make
+      - nspr
+      - nss
       - patch
       - perl
       - perl-interpreter
