--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift_rhel8
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift_rhel8
@@ -22,20 +22,29 @@ RUN chmod +x /entrypoint
 # Put on port 8080
 EXPOSE 8080
 
-# Install ansible
-RUN yum -y install python36 git && \
-    ln -s /usr/bin/python3 /usr/bin/python && \
-    git clone https://github.com/ansible/ansible.git && \
-    cd ansible && \
-    git checkout tags/${ANSIBLE_GIT_VERSION} && \
-    pip3 install -r requirements.txt && \
-    python3 setup.py build && \
-    python3 setup.py install
+# Install Ansible
+COPY OpenBLAS/scripts/install_ansible_from_source.sh /opt/app-root/src
+RUN sh install_ansible_from_source.sh ${ANSIBLE_GIT_VERSION}
 
-# Install prerequisites
+# Install prerequisites via Ansible
 COPY OpenBLAS/OpenShift/ansible /opt/app-root/src/ansible
 RUN cd /opt/app-root/src/ansible && \
+    ln -s /usr/bin/python3.6 /usr/bin/python && \
     ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: 8}"
+
+# Create a folder for the benchmark tests and copy the tests to the new folder
+ENV OPENBLAS_TESTS=/home/openblas_tests
+RUN mkdir -p ${OPENBLAS_TESTS}/src
+COPY OpenBLAS/src/gemm_test.c ${OPENBLAS_TESTS}/src
+COPY OpenBLAS/src/compare.c ${OPENBLAS_TESTS}/src
+COPY OpenBLAS/run_benchmarks.sh ${OPENBLAS_TESTS}
+COPY OpenBLAS/compile_gemm.sh ${OPENBLAS_TESTS}
+COPY OpenBLAS/compile_compare.sh ${OPENBLAS_TESTS}
+
+# Copy AVX flags and recommended arch scripts
+RUN mkdir -p ${OPENBLAS_TESTS}/scripts
+COPY OpenBLAS/scripts/get_avx_flags.sh ${OPENBLAS_TESTS}/scripts
+COPY OpenBLAS/scripts/get_recommended_arch.sh ${OPENBLAS_TESTS}/scripts
 
 # Create a folder for the benchmark tests and copy the tests to the new folder
 ENV OPENBLAS_TESTS=/home/openblas_tests
@@ -53,12 +62,12 @@ RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod 777 ${OPENBLAS_TESTS} && \
     chmod 777 ${OPENBLAS_TESTS}/src && \
     chmod 777 /usr/libexec/s2i/run && \
-    chmod +x /usr/bin/rpmdev-setuptree && \
-    chmod +x /usr/local/bin/rpmbuild && \
     chmod 777 /etc/passwd && \
     mkdir -p /opt/app-root/src && \
     chmod 777 /opt/app-root/src && \
-    chmod 777 /opt/app-root
+    chmod 777 /opt/app-root && \
+    chmod +x ${OPENBLAS_TESTS}/scripts/get_avx_flags.sh && \
+    chmod +x ${OPENBLAS_TESTS}/scripts/get_recommended_arch.sh
 
 # This default user is created in the openshift/base-centos7 image
 USER 1000280000
