--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift_rhel7
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift_rhel7
@@ -28,7 +28,7 @@ COPY OpenBLAS/scripts/install_ansible_from_source.sh /opt/app-root/src
 RUN sh install_ansible_from_source.sh ${ANSIBLE_GIT_VERSION}
 
 # Install prerequisites via Ansible
-COPY OpenBLAS/OpenShift/ansible /opt/app-root/src/ansible
+COPY OpenBLAS/playbooks /opt/app-root/src/ansible
 RUN cd /opt/app-root/src/ansible && \
     ansible-playbook -i hosts play.yaml
 
