--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift_rhel8
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift_rhel8
@@ -23,14 +23,20 @@ RUN chmod +x /entrypoint
 EXPOSE 8080
 
 # Install Ansible
-COPY OpenBLAS/scripts/install_ansible_from_source.sh /opt/app-root/src
-RUN sh install_ansible_from_source.sh ${ANSIBLE_GIT_VERSION}
+COPY OpenBLAS/scripts/install_ansible_from_source.sh ${HOME}
+RUN sh install_ansible_from_source.sh ${ANSIBLE_GIT_VERSION} && \
+    rm install_ansible_from_source.sh
 
 # Install prerequisites via Ansible
-COPY OpenBLAS/playbooks/package_installation /opt/app-root/src/ansible
-RUN cd /opt/app-root/src/ansible && \
+COPY OpenBLAS/playbooks/package_installation ${HOME}
+RUN cd ${HOME} && \
     ln -s /usr/bin/python3.6 /usr/bin/python && \
-    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: 8}"
+    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: 8}" && \
+    rm -rf packages_playbook
+
+# Copy OpenBLAS installation playbook
+RUN mkdir ${HOME}/openblas_playbook
+COPY OpenBLAS/playbooks/OpenBLAS_installation ${HOME}/openblas_playbook
 
 # Create a folder for the benchmark tests and copy the tests to the new folder
 ENV OPENBLAS_TESTS=/home/openblas_tests
@@ -43,18 +49,8 @@ COPY OpenBLAS/compile_compare.sh ${OPENBLAS_TESTS}
 
 # Copy AVX flags and recommended arch scripts
 RUN mkdir -p ${OPENBLAS_TESTS}/scripts
-COPY OpenBLAS/scripts/get_avx_flags.sh ${OPENBLAS_TESTS}/scripts
 COPY OpenBLAS/scripts/get_recommended_arch.sh ${OPENBLAS_TESTS}/scripts
 
-# Create a folder for the benchmark tests and copy the tests to the new folder
-ENV OPENBLAS_TESTS=/home/openblas_tests
-RUN mkdir -p ${OPENBLAS_TESTS}/src
-COPY OpenBLAS/src/gemm_test.c ${OPENBLAS_TESTS}/src
-COPY OpenBLAS/src/compare.c ${OPENBLAS_TESTS}/src
-COPY OpenBLAS/run_benchmarks.sh ${OPENBLAS_TESTS}
-COPY OpenBLAS/compile_gemm.sh ${OPENBLAS_TESTS}
-COPY OpenBLAS/compile_compare.sh ${OPENBLAS_TESTS}
- 
 # Give user permissions to modify the 'macros' file + other files to run tests
 RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod +x ${OPENBLAS_TESTS}/compile_compare.sh && \
@@ -63,10 +59,11 @@ RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod 777 ${OPENBLAS_TESTS}/src && \
     chmod 777 /usr/libexec/s2i/run && \
     chmod 777 /etc/passwd && \
-    mkdir -p /opt/app-root/src && \
+    mkdir -p /opt/app-root/src/.ansible/tmp && \
+    chmod 777 /opt/app-root/src/.ansible/tmp && \
+    chmod 777 /opt/app-root/src/.ansible && \
     chmod 777 /opt/app-root/src && \
     chmod 777 /opt/app-root && \
-    chmod +x ${OPENBLAS_TESTS}/scripts/get_avx_flags.sh && \
     chmod +x ${OPENBLAS_TESTS}/scripts/get_recommended_arch.sh
 
 # This default user is created in the openshift/base-centos7 image
