--- a/OpenBLAS/playbooks/OpenBLAS_installation/roles/install/tasks/main.yaml
+++ b/OpenBLAS/playbooks/OpenBLAS_installation/roles/install/tasks/main.yaml
@@ -4,4 +4,4 @@
     chdir: '{{ BUILD_DIR }}/OpenBLAS'
     target: install
     params:
-      PREFIX: '{{ INSTALLD_DIR }}'
+      PREFIX: '{{ INSTALL_DIR }}'
