Updating build job template and changing default command in Dockerfiles to /usr/libexec/s2i/usage

--- a/OpenBLAS/OpenShift/templates/openblas-build-job.yaml
+++ b/OpenBLAS/OpenShift/templates/openblas-build-job.yaml
@@ -22,7 +22,7 @@ objects:
         containers:
         - name: "${APP_NAME}"
           image: "${REGISTRY}/${NAMESPACE}/${IMAGESTREAM_NAME}:latest"
-          command: ["/entrypoint"]
+          command: ["/usr/libexec/s2i/run"]
         restartPolicy: "Never"
 parameters:
 - description: "ImageStream name"
