--- a/FFTW/playbooks/FFTW_installation/roles/install/tasks/main.yaml
+++ b/FFTW/playbooks/FFTW_installation/roles/install/tasks/main.yaml
@@ -35,9 +35,19 @@
 
 - name: Reorganize symlink for libfftw
   command: mv '{{ INSTALL_DIR }}/usr/local/lib/libfftw.so' '{{ INSTALL_DIR }}/lib'
+  when: RHEL_VERSION == "7"
 
 - name: Reorganize symlink for librfftw
   command: mv '{{ INSTALL_DIR }}/usr/local/lib/librfftw.so' '{{ INSTALL_DIR }}/lib'
+  when: RHEL_VERSION == "7"
+
+- name: Reorganize symlink for libfftw_threads
+  command: mv '{{ INSTALL_DIR }}/usr/local/lib/libfftw_threads.so' '{{ INSTALL_DIR }}/lib'
+  when: RHEL_VERSION == "7"
+
+- name: Reorganize symlink for librfftw_threads
+  command: mv '{{ INSTALL_DIR }}/usr/local/lib/librfftw_threads.so' '{{ INSTALL_DIR }}/lib'
+  when: RHEL_VERSION == "7"
 
 - name: Remove {{ INSTALL_DIR }}/usr
   file:
