--- a/FFTW/Dockerfiles/Dockerfile.openshift_rhel7
+++ b/FFTW/Dockerfiles/Dockerfile.openshift_rhel7
@@ -7,6 +7,9 @@ ENV BUILDER_VERSION 1.0
 # Ansible version
 ENV ANSIBLE_GIT_VERSION=v2.7.10
 
+# RHEL version (for building FFTW)
+ENV RHEL_VERSION=7
+
 # Set up labels
 LABEL io.openshift.s2i.scripts-url="image:///usr/libexec/s2i"
 LABEL io.openshift.expose-services="8080:http"
